@@ -1,5 +1,12 @@
           CHANGES IN SOUNDGEN VERSION 1.?.? [...Sys.Date()...]
 
+MINOR
+  * Internal seewave function stft() was renamed to stdft() in seewave 2.0.6. To ensure compatibility, soundgen now requires seewave >= 2.0.6
+  * soundgen_app(): fixed a bug introduced in soundgen 1.1.0, which caused the app to crash with simplified formant specification
+  * soundgen_app(): one-click formant picker added to streamline specification of F1 & F2
+  * soundgen_app(): more intelligent scaling of noise anchors as sylLen changes
+
+
           CHANGES IN SOUNDGEN VERSION 1.1.0 [19-October-2017]
 
 MAJOR
